fix: Remove excessive gaps between product cards in all components
- Changed perfume_item width from 22% to calc(25% - 5px) to properly calculate 4-column grid with 20px gap
- Fixed in all product listing components:
  - crazy_deal_comp
  - crazy_deal
  - best_perfume_comp
  - best_seller-perfume
  - new_arrivals
  - oud_collection & oud_collection_comp
  - perfume_for_her & perfume_for_her_comp
  - perfume_for_him & perfume_for_him_comp
  - unisex
- Cards now display tightly together without large whitespace between rows

--- a/share-component/components/crazy_deal_comp/crazy_comp.module.scss
+++ b/share-component/components/crazy_deal_comp/crazy_comp.module.scss
@@ -32,7 +32,7 @@
 
 
 .perfume_item {
-  width: 22%;
+  width: calc(25% - 5px);
   text-align: center;
   display: flex;
   flex-direction: column;
